[package]
name = "yew_simple_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.*", features = ["csr"]}
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["parsing", "macros"]}
wasm-bindgen = "0.2"
gloo-events = "0.1.2"
log = "0.4.17"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "EventTarget",
    "HtmlInputElement",
]